last commit for this project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="btn-signup">Sign up</button>
           </h1>
           <img
-            src="./assets/Placeholder_view_vector.svg.png"
+            src="./images/Placeholder_view_vector.svg.png"
             class="img-placeholder"
             alt="this is a placeholder for an image"
           />
@@ -45,7 +45,50 @@
       </div>
     </section>
     <section class="info">
-      <h1 class="info-title">Just some random info.</h1>
+      <h1 class="info-title">Just some random information.</h1>
+      <div class="cards">
+        <div class="card__container">
+          <img class="card__img" src="./images/pngimage2.png" alt="" />
+          <p class="card__para">This is a png file</p>
+        </div>
+        <div class="card__container">
+          <img class="card__img" src="./images/pngimage2.png" alt="" />
+          <p class="card__para">This is a png file</p>
+        </div>
+        <div class="card__container">
+          <img class="card__img" src="./images/pngimage2.png" alt="" />
+          <p class="card__para">This is a png file</p>
+        </div>
+        <div class="card__container">
+          <img class="card__img" src="./images/pngimage2.png" alt="" />
+          <p class="card__para">This is a png file</p>
+        </div>
+      </div>
     </section>
+    <section class="quote">
+        <div class="quote__container">
+        <quote class="quote__text">
+            A man who takes pride in the steps required to 
+            achieving <br>a goal more than the achievment of the goal itself is unstopable.
+            <span class="quote__end"> <br>- Wes Waston</span>
+        </quote>
+        </div>
+    </section>
+    <section class="action">
+      <div class="color__block__container">
+      <div class="color-block">
+        <div class="color-block-text">
+          <h4 class="block-text">Call to action! It's time!</h4 class="block-text">
+            <p class="block-para">Sign up for our product by clicking that button right over there</p>
+        </div>
+        <button class="btn-signup2">Sign up</button>
+      </div>
+      </div>
+    </section>
+    <div class="footer">
+      <div class="footer-text">
+        <p>Copyright @ Michael Zadorozhny 2023</p>
+      </div>
+    </div>
   </body>
 </html>
